--- a/wikiviewer/src/assets/scss/_search.scss
+++ b/wikiviewer/src/assets/scss/_search.scss
@@ -5,10 +5,11 @@
   margin: 0;
   padding: 0;
 }
+/*
 html, body {
   font-size: 62.5%;
   height: 100%;
-}
+} */
 body {
   background: #E62878;
 }
@@ -20,14 +21,21 @@ $delayClose2: 0.4s;
 $totalAnim: $step1 + $step2;
 $w: 35rem;
 $h: 6rem;
-$borderW: 0.4rem;
+$borderW: 0.2rem;
+
+.search_wrapper {
+  width: 100%;
+  margin: 0 auto;
+  padding: 2em 0em 2em 0em;
+}
 
 .search {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-left: $w/-2;
-  margin-top: $h/-2;
+  position: relative;
+  margin: 0 auto;
+  //top: 30%;
+  //left: 50%;
+  //margin-left: $w/-2;
+  //margin-top: $h/-2;
   width: $w;
   height: $h;
 
@@ -113,8 +121,8 @@ $borderW: 0.4rem;
     position: absolute;
     top: $h/4;
     right: $h/4;
-    width: $h/2;
-    height: $h/2;
+    width: $h/3;
+    height: $h/3;
     cursor: pointer;
     transform: scale(0);
 
@@ -157,7 +165,7 @@ $borderW: 0.4rem;
       width: 100%;
       height: $h/10;
       background: $primary-color;
-      border-radius: 0.5rem;
+      border-radius: 0.2rem;
       opacity: 0;
     }
     &:before {
